# test_CUDA_IPC

./: .gitignore  README.md  cuda_gl_pbo_viewer.py  cupy_cuda_ipc_shm_demo.py  cupy_cuda_ipc_stream_multi_consumers.py  cupy_cuda_ipc_stream_readonly_demo.py  get_pycuda.bat  main.py  mkdir.bat  pyproject.toml
IPCrgba/: ipc_rgba_gl_viewer_pycuda.py  ipc_rgba_producer_cupy.py
TCPiceoryx2/: README.md  README_iceoryx2.md
TCPiceoryx2/consumers/: iox2_ai_consumer_torch.py  iox2_debug_subscriber.py  iox2_gl_viewer_pycuda.py  ipc_ai_consumer_torch.py  ipc_debug_consumer_cupy.py  ipc_gl_viewer_pycuda.py
TCPiceoryx2/examples/: 01_run_sim_rgb.bat  02_run_decode_publish_rgb.bat  03_run_viewer_rgb.bat  04_run_ai_rgb.bat  05_run_iox2_decode_publish_rgb.bat  06_run_iox2_viewer_rgb.bat  07_run_iox2_ai_rgb.bat  run_full_rgb_demo_notes.txt  run_iox2_rgb_demo_notes.txt
TCPiceoryx2/ipc_common/: cuda_ipc_ring.py  iox2_cuda_ring.py  iox2_messages.py  iox2_transport.py  shm_layout.py  stream_specs.py  torch_cupy.py
TCPiceoryx2/producers/: video_decode_iox2_publisher.py
TCPsteam/: README.md
TCPsteam/examples/: 01_run_sim_rgb.bat  02_run_decode_publish_rgb.bat  03_run_viewer_rgb.bat  04_run_ai_rgb.bat  run_full_rgb_demo_notes.txt
TCPsteam/ipc_common/: cuda_ipc_ring.py  torch_cupy.py
TCPsteam/producers/: video_decode_ipc_publisher.py
lib/: com.py  msg.py  utils.py
lib/examples/: iox2_encoded_feeder.py  iox2_gl_viewer_pycuda.py  iox2_tcp_video_republisher.py  iox2_to_gpu_decode.py  video_decode_iox2_publisher.py
lib/tool/: iox_video_types.py  oakd_poe_sim_to_iox.py  (+1 more)
