[project]
name = "test-cuda-ipc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda12x>=14.1.0",
    "mako>=1.3.12",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "platformdirs>=4.9.6",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pytools>=2026.1",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "torch",
    "pynvvideocodec",
    "pytest>=9.0.3",
    "iceoryx2>=0.9.0",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

